--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -4,3 +4,6 @@ LogLevel=INFO
 
 # Nom du fichier contenant les Point vides de la grille
 FichierEmptyPoints=Configuration/AvalamEmptyPoints.txt
+
+# Nom du fichier de sauvegarde d'une partie
+FichierSauvegarde=Sauvegarde/Partie.txt
