Finition du code permettant de sauvegarder une partie. Début du code pour récupérer une partie sauvegarder

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -6,4 +6,4 @@ LogLevel=INFO
 FichierEmptyPoints=Configuration/AvalamEmptyPoints.txt
 
 # Nom du fichier de sauvegarde d'une partie
-FichierSauvegarde=Sauvegarde/Partie.txt
+FichierSauvegarde=FichierSauvegarde
