Ajout de la classe Preferences au Modele.

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -7,3 +7,17 @@ FichierEmptyPoints=Configuration/AvalamEmptyPoints.txt
 
 # Nom du fichier de sauvegarde d'une partie
 FichierSauvegarde=FichierSauvegarde
+
+#Nom du fichier des propriété utilisateur
+user_config=FichierPreferences.properties
+
+#Propriétés
+couleurJ1=0
+couleurJ2=1
+couleurTheme=2
+relanceAutomatique=false
+estAutoriseHistorique=true
+estAutoriseSuggestion=true
+IAAffrontement=IAAleatoire
+IA_1=IAAleatoire
+IA_2=IAAleatoire
