--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -5,8 +5,8 @@ LogLevel=INFO
 # Nom du fichier contenant les Point vides de la grille
 FichierEmptyPoints=Configuration/AvalamEmptyPoints.txt
 
-# Nom du fichier de sauvegarde d'une partie
-FichierSauvegarde=FichierSauvegarde
+# Extension des fichiers de sauvegarde
+ExtensionSauvegarde=save
 
 #Nom du fichier des propriété utilisateur
 user_config=FichierPreferences.properties
