--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -11,6 +11,9 @@ ExtensionSauvegarde=save
 #Nom du fichier des propriété utilisateur
 user_config=FichierPreferences.properties
 
+#Nom du fichier de Sauveguarde de classement utilisateur
+user_classement=Classement.save
+
 #Propriétés
 couleurJ1=0
 couleurJ2=1
