Ajout des fonctions abandonner et RelancerPartie, avec enregistrement des scores

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -12,7 +12,7 @@ ExtensionSauvegarde=save
 user_config=FichierPreferences.properties
 
 #Nom du fichier de Sauveguarde de classement utilisateur
-user_classement=Classement.save
+user_classement=Classement
 
 #Propriétés
 couleurJ1=0
