Déplacement de la gestion des préférences dans la classe Configuration

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -8,8 +8,8 @@ FichierEmptyPoints=Configuration/AvalamEmptyPoints.txt
 # Extension des fichiers de sauvegarde
 ExtensionSauvegarde=save
 
-#Nom du fichier des propriété utilisateur
-user_config=FichierPreferences.properties
+# User properties
+user_prop=user_properties.cfg
 
 #Nom du fichier de Sauveguarde de classement utilisateur
 user_classement=Classement
