Ajout de la gestion des noms de joueurs depuis la classe Jeu (pour des noms uniques)

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -14,6 +14,9 @@ user_prop=user_properties.cfg
 #Nom du fichier de Sauveguarde de classement utilisateur
 user_classement=Classement
 
+#Nom des IAs disponibles
+IA_names=IAAleatoire,IABasique,IAFort,IAFortCoup
+
 #Propriétés
 couleurJ1=0
 couleurJ2=1
