Ajout de l'enregistrement de la préférence pour le son

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -18,8 +18,6 @@ user_classement=Classement
 IA_names=IAAleatoire,IABasique,IAFort,IAFortCoup
 
 #Propriétés
-couleurJ1=0
-couleurJ2=1
 couleurTheme=2
 relanceAutomatique=false
 estAutoriseHistorique=true
@@ -27,3 +25,4 @@ estAutoriseSuggestion=true
 IAAffrontement=IAAleatoire
 IA_1=IAAleatoire
 IA_2=IAAleatoire
+sonOn=true
