Suppression de IAFortCoup dans defaut.cfg

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -15,7 +15,7 @@ user_prop=user_properties.cfg
 user_classement=Classement
 
 #Nom des IAs disponibles
-IA_names=IAAleatoire,IABasique,IAFort,IAFortCoup
+IA_names=IAAleatoire,IABasique,IAFort
 
 #Propriétés
 couleurTheme=2
