Ajout d'une méthode d'accès aux icons (dans la classe Configuration). Changement des accès dans la classe JeuVue.

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -29,3 +29,12 @@ sonOn=true
 IACommence=true
 pseudoJ1=Joueur 1
 pseudoJ2=Joueur 2
+
+#Icones
+iconBack=icons/outline_arrow_back_ios_black_24dp.png
+iconHelp=icons/outline_help_outline_black_24dp.png
+iconSkipPrevious=icons/outline_skip_previous_black_24dp.png
+iconArrowLeft=icons/outline_arrow_left_black_24dp.png
+iconStop=icons/outline_stop_black_24dp.png
+iconArrowRight=icons/outline_arrow_right_black_24dp.png
+iconSkipNext=icons/outline_skip_next_black_24dp.png
