Ajout de la possibilité de choisir si l'IA commence dans le mode Joueur contre IA

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -26,7 +26,7 @@ IAAffrontement=IAAleatoire
 IA_1=IAAleatoire
 IA_2=IAAleatoire
 sonOn=true
-IACommence=true
+IACommence=false
 pseudoJ1=Joueur 1
 pseudoJ2=Joueur 2
 
