Mise à jour de la TimeLine et Changement du bouton Play/Pause lors de la navigation dans l'historique

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -44,6 +44,7 @@ iconDisabled=icons/outline_disabled_by_default_black_24dp.png
 iconDone=icons/outline_done_black_24dp.png
 iconVolumeUp=icons/outline_volume_up_black_24dp.png
 iconVolumeOff=icons/outline_volume_off_black_24dp.png
+iconPlay=icons/outline_play_arrow_black_24dp.png
 
 #Noms
 img12=img/12.png
