Changement de l'icône stop en pause pour l'Historique

--- a/ressources/defaut.cfg
+++ b/ressources/defaut.cfg
@@ -49,6 +49,7 @@ iconVolumeUp=icons/outline_volume_up_black_24dp.png
 iconVolumeOff=icons/outline_volume_off_black_24dp.png
 iconPlay=icons/outline_play_arrow_black_24dp.png
 iconSwap=icons/outline_swap_horiz_black_24dp.png
+iconPause=icons/outline_pause_black_24dp.png
 
 
 #Noms
